1999-11-25  Kenichi Handa  <handa@etl.go.jp>

	* fileio.c (Finsert_file_contents): Set buffer-file-coding-system
	of the current buffer via Fset.

1999-11-24  Dave Love  <fx@gnu.org>

	* xfns.c: Don't duplicate Qdisplay definition done elsewhere.

	* xfaces.c: Don't duplicate Qmode_line definition done elsewhere.

	* xfns.c: Don't duplicate Qdisplay definition done elsewhere.

1999-11-24  Gerd Moellmann  <gerd@gnu.org>

	* lisp.h (enum pvec_type): Put PVEC_FLAG in #if 0.

	* emacs.c (PVEC_FLAG): New variable.

1999-11-23  Gerd Moellmann  <gerd@gnu.org>

	* unexaix.c (unexec): Use unsigned instead of uintptr_t because
	that fails on IBM PowerPC, AIX 4.2.
	
1999-11-22  Eli Zaretskii  <eliz@is.elta.co.il>

	* buffer.c (syms_of_buffer): Add %z, %Z, %m and %& to the doc
	string of mode-line-format.  Remove the obsolete %t.

1999-11-22  Gerd Moellmann  <gerd@gnu.org>

	* dispnew.c (direct_output_for_insert): Increment glyph positions
	for glyphs from buffer text only.

	* emacs.c (gdb_valbits, gdb_gctypebits, gdb_emacs_intbits)
	(gdb_data_seg_bits): New variables.
	
	* lisp.h (enum gdb_lisp_params): Put in #if 0, since it doesn't
	work on systems not allowing enumerators > INT_MAX, and it
	won't work if EMACS_INT is long long.

1999-11-22  Paul Eggert  <eggert@twinsun.com>

	Port to SunOS 4.1.x again.  Help out with Alpha port.
	Rename messages-locale to system-messages-locale,
	and likewise for time-locale.
	
	* callproc.c (strerror): Remove decl.
	* fileio.c (strerror): Likewise.
	* process.c (strerror): Likewise.
	* emacs.c (strerror): Likewise.
	(Vsystem_messages_locale): Renamed from Vmessages_locale.
	All uses changed.
	(Vprevious_system_messages_locale): Likewise, from
	Vprevious_messages_locale.
	(Vsystem_time_locale): Likewise, from Vtime_locale.
	(Vprevious_system_time_locale): Likewise, from Vprevious_time_locale.
	(ABORT_RETURN_TYPE): New macro.
	(abort): Return type is now ABORT_RETURN_TYPE.
	(main): Always invoke init_signals, even if POSIX_SIGNALS is not